syntax = "proto3";

service ChatService {
    rpc SendMessage (Message) returns (Message);
}

message Message {
    string text = 1;
}