syntax = "proto3";

service AuctionService {
    rpc InitiateAuction (InitiateAuctionRequest) returns (InitiateAuctionResponse);
    rpc PlaceBid (PlaceBidRequest) returns (PlaceBidResponse);
    rpc GetAllAuctions(AuctionEmpty) returns (AuctionList);
    rpc CloseAuction(AuctionResponse) returns (AuctionEmpty);
}

message InitiateAuctionRequest {
    string item_name = 1;
    double starting_price = 2;
}

message InitiateAuctionResponse {
    int32 auction_id = 1;
    string owner_node_id=2;
}

message PlaceBidRequest {
    int32 auction_id = 1;
    double bid_amount = 2;
    string bidder = 3;
}

message PlaceBidResponse {
    bool accepted = 1;
}

message AuctionList{
    repeated AuctionResponse auctionList = 1;
}

message AuctionResponse{
    string auction_id =1;
    string owner_node_id=2;
}


message AuctionEmpty {}